Added completedAt
